Event Select Button

--- a/events/index.html
+++ b/events/index.html
@@ -140,6 +140,16 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                   -webkit-transition: .3s ease-in-out;
                   transition: .3s ease-in-out;
                 }
+                .paddMarg {
+                  padding-left: 10.5%;
+                  padding-right: 10.5%;
+                  padding-top: 10.5;
+                  padding-bottom: 10.5%;
+                  margin-left: 10.5%;
+                  margin-right: 10.5%;
+                  margin-top: 10.5;
+                  margin-bottom: 10.5%;
+                }
                 .hover10 figure:hover img {
                   -webkit-filter: grayscale(100%) blur(3px);
                   filter: grayscale(100%) blur(3px);
@@ -148,7 +158,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
         <!-- Member Box Start -->
         <div class="member-box col-xs-6 col-sm-4 col-md-3">
           <div class="overflow-hidden position-relative width-100">
-            <div class="position-relative">
+            <div class="position-relative paddMarg">
               <div class="img-wrapper">
                     <div class="hover10 column">
                       <figure><img src="../res/images/events/Quiz.png" /></figure>
@@ -189,7 +199,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
         <!-- Member Box Start -->
         <div class="member-box col-xs-6 col-sm-4 col-md-3">
           <div class="overflow-hidden position-relative width-100">
-            <div class="position-relative">
+            <div class="position-relative paddMarg">
               <div class="img-wrapper hover10 column">
                 <figure><img src="../res/images/events/Coding2.png" alt=""/></figure>
               </div>
@@ -232,7 +242,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
         <!-- Member Box Start -->
         <div class="member-box col-xs-6 col-sm-4 col-md-3">
           <div class="overflow-hidden position-relative width-100">
-            <div class="position-relative">
+            <div class="position-relative paddMarg">
               <div class="img-wrapper hover10 column">
                 <figure><img src="../res/images/events/Lan3.svg" alt=""/></figure>
               </div>
@@ -271,7 +281,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
         <!-- Member Box Start -->
         <div class="member-box col-xs-6 col-sm-4 col-md-3">
           <div class="overflow-hidden position-relative width-100">
-            <div class="position-relative">
+            <div class="position-relative paddMarg">
               <div class="img-wrapper hover10 column">
                 <figure><img src="../res/images/events/Bug4.png" alt=""/></figure>
               </div>
@@ -310,7 +320,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
         <!-- Member Box Start -->
         <div class="member-box col-xs-6 col-sm-4 col-md-3">
           <div class="overflow-hidden position-relative width-100">
-            <div class="position-relative">
+            <div class="position-relative paddMarg">
               <div class="img-wrapper hover10 column">
                 <figure><img src="../res/images/events/Website5.png" alt=""/></figure>
               </div>
@@ -348,7 +358,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
         <!-- Member Box Start -->
         <div class="member-box col-xs-6 col-sm-4 col-md-3">
           <div class="overflow-hidden position-relative width-100">
-            <div class="position-relative">
+            <div class="position-relative paddMarg">
               <div class="img-wrapper hover10 column">
                 <figure><img src="../res/images/events/workshop6.png" alt=""/></figure>
               </div>
@@ -387,7 +397,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
         <!-- Member Box Start -->
         <div class="member-box col-xs-6 col-sm-4 col-md-3">
           <div class="overflow-hidden position-relative width-100">
-            <div class="position-relative">
+            <div class="position-relative paddMarg">
               <div class="img-wrapper hover10 column">
                 <figure><img src="../res/images/events/dance7.png" alt=""/></figure>
               </div>
@@ -425,9 +435,9 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
         <!-- Member Box Start -->
         <div class="member-box col-xs-6 col-sm-4 col-md-3">
           <div class="overflow-hidden position-relative width-100">
-            <div class="position-relative">
+            <div class="position-relative paddMarg">
               <div class="img-wrapper column hover10">
-                <figure><img src="../res/images/events/Quiz.png" alt=""/></figure>
+                <figure><img src="../res/images/events/fashion.png" alt=""/></figure>
               </div>
             </div>
             <!-- //.position-relative -->
@@ -463,9 +473,9 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
         <!-- Member Box Start -->
         <div class="member-box col-xs-6 col-sm-4 col-md-3">
           <div class="overflow-hidden position-relative width-100">
-            <div class="position-relative">
+            <div class="position-relative paddMarg">
               <div class="img-wrapper hover10 column">
-                  <figure><img src="../res/images/events/Quiz.png" alt=""/></figure>
+                  <figure><img src="../res/images/events/microphone.png" alt=""/></figure>
               </div>
             </div>
             <!-- //.position-relative -->
@@ -502,7 +512,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
         <!-- Member Box Start -->
         <div class="member-box col-xs-6 col-sm-4 col-md-3">
           <div class="overflow-hidden position-relative width-100">
-            <div class="position-relative">
+            <div class="position-relative paddMarg">
               <div class="img-wrapper hover10 column">
                 <figure><img src="../res/images/events/Quiz.png" alt=""/></figure>
               </div>
@@ -540,9 +550,9 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
         <!-- Member Box Start -->
         <div class="member-box col-xs-6 col-sm-4 col-md-3">
           <div class="overflow-hidden position-relative width-100">
-            <div class="position-relative">
+            <div class="position-relative paddMarg">
               <div class="img-wrapper hover10 column">
-                <figure><img src="../res/images/events/Quiz.png" alt=""/></figure>
+                <figure><img src="../res/images/events/photograph.png" alt=""/></figure>
               </div>
             </div>
             <!-- //.position-relative -->
@@ -581,9 +591,9 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
         <!-- Member Box Start -->
         <div class="member-box col-xs-6 col-sm-4 col-md-3">
           <div class="overflow-hidden position-relative width-100">
-            <div class="position-relative">
+            <div class="position-relative paddMarg">
                 <div class="img-wrapper hover10 column">
-                    <figure><img src="../res/images/events/Quiz.png" alt=""/></figure>
+                    <figure><img src="../res/images/events/cricket.png" alt=""/></figure>
               </div>
             </div>
             <!-- //.position-relative -->
@@ -619,9 +629,9 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
         <!-- Member Box Start -->
         <div class="member-box col-xs-6 col-sm-4 col-md-3">
           <div class="overflow-hidden position-relative width-100">
-            <div class="position-relative">
+            <div class="position-relative paddMarg">
                 <div class="img-wrapper hover10 column">
-                    <figure><img src="../res/images/events/Quiz.png" alt=""/></figure>
+                    <figure><img src="../res/images/events/treasure.png" alt=""/></figure>
               </div>
             </div>
             <!-- //.position-relative -->
@@ -657,7 +667,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
         <!-- Member Box Start -->
         <div class="member-box col-xs-6 col-sm-4 col-md-3">
           <div class="overflow-hidden position-relative width-100">
-            <div class="position-relative">
+            <div class="position-relative paddMarg">
                 <div class="img-wrapper hover10 column">
                     <figure><img src="../res/images/events/Quiz.png" alt=""/></figure>
               </div>
@@ -695,7 +705,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
         <!-- Member Box Start -->
         <div class="member-box col-xs-6 col-sm-4 col-md-3">
           <div class="overflow-hidden position-relative width-100">
-            <div class="position-relative">
+            <div class="position-relative paddMarg">
                 <div class="img-wrapper hover10 column">
                     <figure><img src="../res/images/events/Quiz.png" alt=""/></figure>
               </div>
@@ -733,9 +743,9 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
         <!-- Member Box Start -->
         <div class="member-box col-xs-6 col-sm-4 col-md-3">
           <div class="overflow-hidden position-relative width-100">
-            <div class="position-relative">
+            <div class="position-relative paddMarg">
                 <div class="img-wrapper hover10 column">
-                    <figure><img src="../res/images/events/Quiz.png" alt=""/></figure>
+                    <figure><img src="../res/images/events/chess.png" alt=""/></figure>
               </div>
             </div>
             <!-- //.position-relative -->
