Registration on HomePage

--- a/index.html
+++ b/index.html
@@ -130,11 +130,10 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                     </p>
                     <h4 class="font-family-alt font-weight-900 letter-spacing-2 text-uppercase text-white xs-title-small sm-title-medium title-extra-large">
                       Jamia Millia Islamia
-                    </h4>
-                    <!-- <br>
-                    <a href="/Teknothon2018/register/" class="btn btn-base-color sm-btn-medium btn-large">
+                    </h4><br>
+                    <a href="/eventsreg/" class="btn btn-base-color sm-btn-medium btn-large">
                       Register Now
-                    </a> -->
+                    </a> 
                   </div>
                   <!-- //.col-md-10 -->
                 </div>
@@ -166,12 +165,12 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                     </p>
                     <h4 class="font-family-alt font-weight-900 letter-spacing-2 text-uppercase text-white xs-title-small sm-title-medium title-extra-large">
                       Jamia Millia Islamia
-                    </h4>
-                    <!-- <br>
-                    <a href="/Teknothon2018/register/" class="btn btn-base-color sm-btn-medium btn-large">
+                    </h4> <br>
+                    <a href="/eventsreg/" class="btn btn-base-color sm-btn-medium btn-large">
                       Register Now
-                    </a> -->
+                    </a> 
                   </div>
+                  <!-- //.col-sm-4 -->
                   <!-- //.col-md-10 -->
                 </div>
                 <!-- //.row -->
@@ -202,11 +201,10 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                     </p>
                     <h4 class="font-family-alt font-weight-900 letter-spacing-2 text-uppercase text-white xs-title-small sm-title-medium title-extra-large">
                       Jamia Millia Islamia
-                    </h4>
-                    <!-- <br>
-                    <a href="/Teknothon2018/register/" class="btn btn-base-color sm-btn-medium btn-large">
+                    </h4><br>
+                    <a href="/eventsreg/" class="btn btn-base-color sm-btn-medium btn-large">
                       Register Now
-                    </a> -->
+                    </a> 
                   </div>
                   <!-- //.col-md-10 -->
                 </div>
