--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                     <h4 class="font-family-alt font-weight-900 letter-spacing-2 text-uppercase text-white xs-title-small sm-title-medium title-extra-large">
                       Jamia Millia Islamia
                     </h4><br>
-                    <a href="/eventsreg/" class="btn btn-base-color sm-btn-medium btn-large">
+                    <a href="/eventreg/" class="btn btn-base-color sm-btn-medium btn-large">
                       Register Now
                     </a> 
                   </div>
@@ -166,7 +166,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                     <h4 class="font-family-alt font-weight-900 letter-spacing-2 text-uppercase text-white xs-title-small sm-title-medium title-extra-large">
                       Jamia Millia Islamia
                     </h4> <br>
-                    <a href="/eventsreg/" class="btn btn-base-color sm-btn-medium btn-large">
+                    <a href="/eventreg/" class="btn btn-base-color sm-btn-medium btn-large">
                       Register Now
                     </a> 
                   </div>
@@ -202,7 +202,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                     <h4 class="font-family-alt font-weight-900 letter-spacing-2 text-uppercase text-white xs-title-small sm-title-medium title-extra-large">
                       Jamia Millia Islamia
                     </h4><br>
-                    <a href="/eventsreg/" class="btn btn-base-color sm-btn-medium btn-large">
+                    <a href="/eventreg/" class="btn btn-base-color sm-btn-medium btn-large">
                       Register Now
                     </a> 
                   </div>
