Registration on HomePage

--- a/eventreg/index.html
+++ b/eventreg/index.html
@@ -178,8 +178,8 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                                                     <div class="modal-body">
                                                             <label for="Quizical"><input type="checkbox" class="event_checks" value=50 name="Quizical" id="Quizical"/>QUIZICAL</label><br>
                                                             <label for="GAME OF CODING"><input type="checkbox" class="event_checks" value=50 name="GAME OF CODING" id="GAME OF CODING"/>GAME OF CODING</label><br>
-                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="LAN MULTIPLAYER GAMING (PC)"/>LAN MULTIPLAYER GAMING - PC</label><br>
-                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="LAN MULTIPLAYER GAMING (MOBILE)"/>LAN MULTIPLAYER GAMING - MOBILE</label><br>
+                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="LAN MULTIPLAYER GAMING (PC)"/>MULTIPLAYER GAMING - PC</label><br>
+                                                            <label for=""><input type="checkbox" class="event_checks" value=50 name="LAN MULTIPLAYER GAMING (MOBILE)"/>MULTIPLAYER GAMING - MOBILE</label><br>
                                                             <label for=""><input type="checkbox" class="event_checks" value=50 name="BUGVILLA BUG-HUNTING"/>BUGVILLA BUG-HUNTING</label><br>
                                                             <label for=""><input type="checkbox" class="event_checks" value=100 name="WEBSITE DESIGN"/>WEBSITE DESIGN</label><br>
                                                             <label for=""><input type="checkbox" class="event_checks" value=50 name="WORKSHOP SESSIONS (Linux)"/>WORKSHOP SESSIONS - Linux</label><br>
@@ -302,7 +302,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                                     <span class="text-muted">50 Rs</span> </li>
                                 <li class="list-group-item d-flex justify-content-between">
                                   <div>
-                                    <h6 class="my-0"><b>LAN Multiplayer Gaming</b></h6> <small class="text-muted">Mobile [Mini Militia]</small>
+                                    <h6 class="my-0"><b>Multiplayer Gaming</b></h6> <small class="text-muted">Mobile [Mini Militia]</small>
                                     <br><small class="text-muted">PC [Counter Strike]</small> </div>
                                     <small class="text-muted"><br>50 Rs <br>50 Rs</small> </li>
                                 <li class="list-group-item d-flex justify-content-between">
