--- a/events/index.html
+++ b/events/index.html
@@ -250,7 +250,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
             <!-- //.position-relative -->
             <div class="bg-gray-light no-padding-rl padding-6 position-relative text-center">
                 <span class="display-block font-family-alt font-weight-700 letter-spacing-2 text-gray-dark-2 text-small text-uppercase">
-                  <button type="button" class="btn" data-toggle="modal" data-target="#LANModal"><span class="glyphicon glyphicon-exclamation-sign"></span> LAN Gaming</button>
+                  <button type="button" class="btn" data-toggle="modal" data-target="#LANModal"><span class="glyphicon glyphicon-exclamation-sign"></span> MultiPlayer Gaming</button>
                     <!-- Modal -->
                     <div class="modal fade" id="LANModal" role="dialog">
                       <div class="modal-dialog">
