LAN to Multiplayer

--- a/eventreg/index.html
+++ b/eventreg/index.html
@@ -303,7 +303,7 @@ Event website by @SahilQaiser, Adapted from github project of Syed Faheel Ahmad 
                                 <li class="list-group-item d-flex justify-content-between">
                                   <div>
                                     <h6 class="my-0"><b>Multiplayer Gaming</b></h6> <small class="text-muted">Mobile [Mini Militia]</small>
-                                    <br><small class="text-muted">PC [Counter Strike]</small> </div>
+                                    <br><small class="text-muted">PC [Counter Strike,COD,etc]</small> </div>
                                     <small class="text-muted"><br>50 Rs <br>50 Rs</small> </li>
                                 <li class="list-group-item d-flex justify-content-between">
                                   <div>
